--- a/Assets/StreamingAssets/adr_res/version.ini
+++ b/Assets/StreamingAssets/adr_res/version.ini
@@ -1,3 +1,8 @@
-{"res_name":"test/panel_test.u3d","md5":"206"}
-{"res_name":"ui/items.u3d","md5":"191"}
-{"res_name":"Lua/Main.lua","md5":"215"}
+{"res_name":"Lua/Global.lua","md5":"F5CA02373F572C9791B49AB1C82E6C30"}
+{"res_name":"Lua/Main.lua","md5":"8A087ABFF33EE0EBCCB0B895345E85DA"}
+{"res_name":"panel/demo/demo_panel_1.u3d","md5":"D8288D6A59DF10DDA8B8FB0F260EA17D"}
+{"res_name":"panel/demo/demo_panel_2.u3d","md5":"A4FD40FB4F10A85ADB5D85A438A24369"}
+{"res_name":"panel/demo/demo_panel_3.u3d","md5":"B809C7EA785675D4F180F394E31466B8"}
+{"res_name":"panel/demo/demo_panel_4.u3d","md5":"9CD07D66D8E4E4F49E9743A29E9E2368"}
+{"res_name":"panel/test/panel_test.u3d","md5":"747019B408FE9A2C7274B410897172E3"}
+{"res_name":"ui/items.u3d","md5":"5C98C4801325DFFCEE7097B729889D12"}
