--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,8 @@
 
 # Unity3D Generated File On Crash Reports
 
+HotFixProj/.vs/HotFixProj/v16/.suo
+Logs/AssetImportWorker0-prev.log
+Logs/AssetImportWorker0.log
+Logs/shadercompiler-AssetImportWorker0.log
+Logs/shadercompiler-UnityShaderCompiler.exe0.log
